[tool.poetry]
name = "wooly-flight-tracker-cli"
version = "0.1.0"
description = ""
authors = ["Will Kronberg <will@willkronberg.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flightradarapi = "^1.3.10"
click = "^8.1.7"
pydantic = "^2.4.0"
geopy = "^2.4.0"
tqdm = "^4.66.1"
retry = "^0.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "wooly_flight_tracker_cli.wooly_flight_tracker:cli"
